--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -6,3 +6,10 @@ $time-animate: .2s;
 $scrollbar-width: 15px;
 $global-padding: 15px;
 $sidebar-width: 300px;
+
+// Odd and even
+$odd-bg: #1c2636;
+
+// Tables
+$table-row-checked: #3b4b65;
+$table-row-hover: $table-row-checked;
