--- a/src/scss/adminer.scss
+++ b/src/scss/adminer.scss
@@ -12,11 +12,11 @@
 @import "headings";
 @import "table";
 @import "form";
-@import "button";
 @import "breadcrumb";
 @import "links";
 @import "code";
 @import "sqleditor";
 @import "menu";
+@import "menu.logout";
 @import "content";
 @import "footer";
