fix logout menu section

--- a/src/scss/_menu.logout.scss
+++ b/src/scss/_menu.logout.scss
@@ -3,7 +3,7 @@
 //
 
 .logout {
-  margin: 1rem;
+  margin: $global-padding;
   background: transparent !important;
   box-shadow: none !important;
 
