--- a/src/scss/adminer.scss
+++ b/src/scss/adminer.scss
@@ -15,6 +15,7 @@
 @import "breadcrumb";
 @import "links";
 @import "code";
+@import "jush";
 @import "sqleditor";
 @import "menu";
 @import "menu.logout";
